# bids-qsirecon

./: .dockerignore  .gitignore  Dockerfile  README.md  manifest.json  pyproject.toml  run.py
fw_gear_bids_qsirecon/: main.py  parser.py  support_functions.py
utils/: dry_run.py
