[tool.poetry]
name = "fw-gear-bids-qsirecon"
version = "0.0"
description = "BIDS qsirecon"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.8.10"
flywheel-gear-toolkit = "^0.6.6"
flywheel-sdk = "^16.8.0"
psutil = "^5.9.0"
flywheel-bids = {git = "https://gitlab.com/flywheel-io/public/bids-client.git", rev = "master"}
errorhandler = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^22.3.0"
isort = "^5.6.4"
pylint = "^2.13.3"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
mypy = "^0.942"
ipython = "^8.0.1"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
